# Rust_First_Project

./: Cargo.toml
.cargo/: config.toml
FirstRustProject/: Cargo.toml
FirstRustProject/src/: main.rs
FirstRustProject/tests/: integration_test.rs
advanced_rust_language_learning/: Cargo.toml
advanced_rust_language_learning/tests/: integration_test.rs
axumapp01_helloworld/: Cargo.toml
axumapp01_helloworld/src/: main.rs
axumapp02_staticfile/: Cargo.toml
axumapp03_addlog/: Cargo.toml
axumapp04_query/: Cargo.toml
axumapp04_query/src/: main.rs
axumapp05_form/: Cargo.toml
axumapp05_form/src/: main.rs
axumapp06_jsoninput/: Cargo.toml
axumapp07_jsonres/: Cargo.toml
axumapp07_jsonres/src/: main.rs
axumapp08_global404/: Cargo.toml
axumapp08_global404/src/: main.rs
axumapp09_template/: Cargo.toml
axumapp09_template/src/: main.rs
axumapp10_db/: Cargo.toml
axumapp10_db/src/: main.rs
axumapp11_todo/: Cargo.toml
axumapp11_todo/src/: main.rs
candle_chat/: Cargo.toml
getinfo/: Cargo.toml
getinfo/src/: server.rs
getinfo_frame/: Cargo.toml
getinfo_frame/src/: client.rs  server.rs
minigrep/src/: lib.rs  main.rs
my-redis/src/: main.rs
num0_parser/: Cargo.toml
tests/: integration_test.rs
tests/chapter1/: test1.rs
tests/chapter10/: test1.rs
tests/chapter11/: test1.rs
tests/chapter12/: test1.rs
tests/chapter13/: test1.rs
tests/chapter3/: test1.rs
tests/chapter4/: test1.rs
tests/chapter5/: test1.rs
tests/chapter8/: mod.rs
tests/chapter9/: test1.rs
tests/multi_file/: test1.rs
(+73 files in other folders)
