[package]
name = "getinfo_frame"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
tokio = { version = "1.47.0",features = ["full"]}
tokio-util = {version = "0.7.15",features = ["full"]}

[[bin]]
name = "server"
path="src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"